manifests/php-k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bitpin-task
  name: bitpin-task
spec:
  minReadySeconds: 5
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bitpin-task
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitpin-task
    spec:
      topologySpreadConstraint:
        - maxSkew: 1
          topologyKey: zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              foo: bar
        - maxSkew: 1
          topologyKey: node
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              foo: bar
#        - maxSkew: 1
#          topologyKey: "kubernetes.io/hostname"
#          whenUnsatisfiable: DoNotSchedule
#          labelSelector:
#            matchLabels:
#              app: bitpin-task
  #        podAntiAffinity:
  #          preferredDuringSchedulingIgnoredDuringExecution:
  #            - podAffinityTerm:
  #                labelSelector:
  #                  matchExpressions:
  #                    - key: app
  #                      operator: In
  #                      values:
  #                        - bitpin-task
  #                topologyKey: kubernetes.io/hostname
  #              weight: 100
      automountServiceAccountToken: false
      containers:
        - name: app
          # envFrom:
          #   - configMapRef:
          #       name: bitpin-task-config
          volumeMounts:
            - name: env-file
              mountPath: .env
          image: miladroid/bitpin-task:prod
          imagePullPolicy: Always
#          lifecycle:
#            postStart:
#              exec:
#                command: [ "/usr/local/bin/php", "artisan", "config:cache" ]
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 400M
              ephemeral-storage: "2Gi"
            requests:
              cpu: 100m
              memory: 200M
              ephemeral-storage: "1Gi"
      volumes:
        - name: env-file
          configMap:
            name: bitpin-task-config
            items:
              - key: env
                path: .env
