manifests/php-k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bitpin-task
  name: bitpin-task
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: bitpin-task
  type: ClusterIP
