manifests/php-k8s-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
  labels:
    app: bitpin-task
  name: bitpin-task
spec:
  rules:
    - host: task.seroadmap.ir
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bitpin-task
              port:
                number: 8000
